force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/AI_Processing_Enabled__c.field-meta.xml
<CustomField>
    <fullName>AI_Processing_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Processing Enabled</label>
    <type>Checkbox</type>
</CustomField>