force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/AllowElectronicSignature__c.field-meta.xml
<CustomField>
    <fullName>AllowElectronicSignature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllowElectronicSignature</label>
    <type>Checkbox</type>
</CustomField>