force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Authentication_Method__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Method__c</fullName>
    <label>Authentication Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email OTP</fullName>
            </value>
            <value>
                <fullName>SMS OTP</fullName>
            </value>
            <value>
                <fullName>Biometric</fullName>
            </value>
            <value>
                <fullName>Password</fullName>
            </value>
            <value>
                <fullName>OAuth SSO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>