force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>