force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Clause__c.field-meta.xml
<CustomField>
    <fullName>Clause__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>