force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Clause_Count__c.field-meta.xml
<CustomField>
    <fullName>Clause_Count__c</fullName>
    <label>Clause Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>