force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ComplianceLevel__c.field-meta.xml
<CustomField>
    <fullName>ComplianceLevel__c</fullName>
    <label>ComplianceLevel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Regulated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>