force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ComplianceScore__c.field-meta.xml
<CustomField>
    <fullName>ComplianceScore__c</fullName>
    <label>ComplianceScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>