force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ComplianceStatus__c.field-meta.xml
<CustomField>
    <fullName>ComplianceStatus__c</fullName>
    <label>ComplianceStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Non-Compliant</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>