force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Content_Word_Count__c.field-meta.xml
<CustomField>
    <fullName>Content_Word_Count__c</fullName>
    <label>Content Word Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>