force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ContentDocument__c.field-meta.xml
<CustomField>
    <fullName>ContentDocument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>DocumentTemplate__c</referenceTo>
    <relationshipName>Document_Lifecycle_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>