force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ContentDocumentString__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentString__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContentDocumentString</label>
    <length>255</length>
    <type>Text</type>
</CustomField>