force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created_Date</label>
    <type>DateTime</type>
</CustomField>