force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current_Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>