force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/DaysToComplete__c.field-meta.xml
<CustomField>
    <fullName>DaysToComplete__c</fullName>
    <label>DaysToComplete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>