force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>