force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>DocumentType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>