force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ExpirationDays__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDays__c</fullName>
    <label>ExpirationDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>