force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/GeneratedClause__c.field-meta.xml
<CustomField>
    <fullName>GeneratedClause__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GeneratedClause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>