force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Generation_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Generation_Time_Minutes__c</fullName>
    <label>Generation Time Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>