force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/GenerationTime__c.field-meta.xml
<CustomField>
    <fullName>GenerationTime__c</fullName>
    <label>GenerationTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>