force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Jurisdiction_Label__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Jurisdiction Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>