force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Last_Compliance_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Compliance_Check__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last_Compliance_Check</label>
    <type>DateTime</type>
</CustomField>