force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Legal_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Legal_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>