force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ML_Analysis_Completed__c.field-meta.xml
<CustomField>
    <fullName>ML_Analysis_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ML Analysis Completed</label>
    <type>Checkbox</type>
</CustomField>