force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ML_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>ML_Approval_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ML Approval Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>