force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ML_Classification__c.field-meta.xml
<CustomField>
    <fullName>ML_Classification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ML Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>