force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ML_Classification_Confidence__c.field-meta.xml
<CustomField>
    <fullName>ML_Classification_Confidence__c</fullName>
    <label>ML Classification Confidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>