force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ML_Classification_Date__c.field-meta.xml
<CustomField>
    <fullName>ML_Classification_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ML Classification Date</label>
    <type>DateTime</type>
</CustomField>