force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ML_Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>ML_Complexity_Score__c</fullName>
    <label>ML Complexity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>