force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ML_Compliance_Requirements__c.field-meta.xml
<CustomField>
    <fullName>ML_Compliance_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ML Compliance Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>