force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Overall_Compliance_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Compliance_Score__c</fullName>
    <label>Overall Compliance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>