force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Processing_Time_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Seconds__c</fullName>
    <label>Processing Time Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>