force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/ProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>ProcessingStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ProcessingStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>