force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
                <isActive>false</isActive>
                <label>Global</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>