force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/RequiredSigners__c.field-meta.xml
<CustomField>
    <fullName>RequiredSigners__c</fullName>
    <label>RequiredSigners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>