force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/RequiresNotarization__c.field-meta.xml
<CustomField>
    <fullName>RequiresNotarization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RequiresNotarization</label>
    <type>Checkbox</type>
</CustomField>