force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
                <isActive>false</isActive>
                <label>Admin</label>
            </value>
            <value>
                <fullName>Developer</fullName>
                <isActive>false</isActive>
                <label>Developer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>