force-app/main/default/objects/DocumentLifecycleConfiguration__c/fields/Signature_Request__c.field-meta.xml
<CustomField>
    <fullName>Signature_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signature_Request</label>
    <referenceTo>Signature_Request__c</referenceTo>
    <relationshipName>Document_Lifecycle_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>